[gd_scene load_steps=13 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://nodes/HurtBox.gd" type="Script" id=3]
[ext_resource path="res://nodes/BlockBox.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 17, 31 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10, 31 )

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "block"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ -15.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "take_block_damage"

[sub_resource type="Animation" id=7]
resource_name = "take_damage"

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 4 )

[node name="BlockBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlockBox"]
position = Vector2( 31, 0 )
shape = SubResource( 8 )

[node name="ParryTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="MoveAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 9 )
anims/block = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="DamageAnimationPlayer" type="AnimationPlayer" parent="."]
anims/take_block_damage = SubResource( 5 )
anims/take_damage = SubResource( 7 )
